Fix `backface-visibility bug` where back side would be hidden on inline flippers.

--- a/src/flipper.scss
+++ b/src/flipper.scss
@@ -27,8 +27,6 @@
 
 		&__front,
 		&__back {
-			-webkit-backface-visibility: hidden;
-			backface-visibility: hidden;
 			float: left;
 			height: inherit;
 			width: inherit;
